third_party/move/move-compiler-v2/tests/checking/attributes/aptos_stdlib_attributes2.exp

Diagnostics:
error: unknown attribute
  ┌─ tests/checking/attributes/aptos_stdlib_attributes2.move:4:7
  │
4 │     #[testonly]
  │       ^^^^^^^^ Attribute name 'testonly' is unknown (use --skip-attribute-checks CLI option to ignore); known attributes are '{"bytecode_instruction", "deprecated", "expected_failure", "native_interface", "test", "test_only", "verify_only"}'.
