third_party/move/move-compiler-v2/tests/checking/attributes/aptos_stdlib_attributes2.move
module velor_std::M {
    fun foo() {}

    #[testonly]
    fun bar() {}
}
